# music_store_assistant_langGraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ollama  LICENSE  README.md  app.py  chainlit.md  docker-compose.yml  pyproject.toml  requirements.txt  wait_for_ollama.sh
config/: db_config.py
db-init/: 01_model.sql  02_data.sql
model/: agent.py  state.py
tools/: album_tools.py  artist_tools.py  country_tools.py  customer_tools.py  employee_tools.py  functions.py  genre_tools.py  invoice_line_tools.py  invoice_tools.py  media_type_tools.py  playlist_tools.py  policy.md  policy.py  policy_tool.py  query_tool.py  track_tools.py
utils/: db_util.py  utils.py
